--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,8 @@
 [workspace]
 resolver = "2"
 
-members = ["tapo", "tapo-py"]
+members = ["tapo"]
 
 [workspace.dependencies]
 chrono = { version = "0.4.34", default-features = false }
-pyo3 = { version = "0.21" }
 tokio = { version = "1.37", default-features = false }
