--- a/tapo/Cargo.toml
+++ b/tapo/Cargo.toml
@@ -12,8 +12,6 @@ repository = "https://github.com/mihai-dinculescu/tapo"
 
 [features]
 default = []
-python = ["dep:pyo3"]
-openssl-vendored = ["openssl/vendored"]
 
 [dependencies]
 anyhow = "1.0"
@@ -28,16 +26,20 @@ isahc = { version = "1.7", features = ["json", "cookies"] }
 itertools = "0.13"
 lazy_static = "1.4"
 log = "0.4"
-openssl = "0.10"
-openssl-src = "=300.2.3"
+
+aes = "0.7"
+block-modes = "0.8"
+hex = "0.4.3"
+
+sha2 = "0.10"
+sha-1 = "0.10"
+
 rand = "0.8"
 serde = { version = "1.0", features = ["derive", "serde_derive"] }
 serde_json = "1.0"
 serde_with = "3.8"
 thiserror = "1.0"
 uuid = { version = "1.8", features = ["serde", "v4"] }
-
-pyo3 = { workspace = true, features = ["serde", "chrono"], optional = true }
 
 [dev-dependencies]
 pretty_env_logger = "0.5"
