--- a/tapo/Cargo.toml
+++ b/tapo/Cargo.toml
@@ -22,7 +22,7 @@ chrono = { workspace = true, default-features = false, features = [
     "clock",
     "serde",
 ] }
-isahc = { version = "1.7", features = ["json", "cookies"] }
+reqwest = { version = "0.12", features = ["cookies"] }
 itertools = "0.13"
 lazy_static = "1.4"
 log = "0.4"
@@ -40,6 +40,7 @@ serde_json = "1.0"
 serde_with = "3.8"
 thiserror = "1.0"
 uuid = { version = "1.8", features = ["serde", "v4"] }
+env_logger = "0.10.2"
 
 [dev-dependencies]
 pretty_env_logger = "0.5"
